<resources>
    <string name="app_name">Text On Photo</string>

    <string name="feedback_title">App feedback</string>
    <string name="feedback_msg">Please describe your problem or feedback when using the app:\n</string>
    <string name="choose_one">Choose an app</string>
    <string name="license">License</string>
    <string name="term_of_use">Terms of use</string>
    <string name="all">All</string>
    <string name="mood">Mood</string>
    <string name="love">Love</string>
    <string name="nature">Nature</string>
    <string name="black_white">Black &amp; White</string>
    <string name="save_fail">Save image unsuccessfully</string>
    <string name="save_success">Save image successfully</string>
    <string name="notify_not_enough_permission">Insufficient permission to execute the option</string>
    <string name="notice">Notice</string>
    <string name="ban_can_cap_du_quyen">You need sufficient permission to use this feature</string>
    <string name="ok">Agree</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="save_or_cancel">Do you want to save the changes?</string>
    <string name="confirm_delete_or_not">Do you really want to delete?</string>
    <string name="select_items">Select image</string>
    <string name="select_number_image">Selected %d</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="selected">Selected</string>
    <string name="phien_ban">Version: %s</string>
    <string name="support_our">Support us</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share app</string>
    <string name="other_app">Other Apps</string>
    <string name="app_info">Application Information</string>
    <string name="develop_team">Development team: XL team</string>
    <string name="created_picture">Photo created</string>
    <string name="firebase_picture">Photo library</string>
    <string name="settings">Settings</string>
    <string name="take_photo">Take a photo</string>
    <string name="gallery">Gallery</string>
    <string name="view_more">See more</string>
    <string name="select_picture">Select picture</string>
    <string name="not_selected_picture">You have not selected a photo yet.</string>
    <string name="add_text">Add text</string>
    <string name="color_text">Text color</string>
    <string name="color_background">Bkd color</string>
    <string name="shadow">Shadow</string>
    <string name="font">Font</string>
    <string name="gravity">Align</string>
    <string name="saturation">Saturation</string>
    <string name="opacity">Opacity</string>
    <string name="edit">Edit</string>
    <string name="photo_background">Photo</string>
    <string name="save">Save</string>
    <string name="no_picture">No photos</string>
    <string name="no_permission">No right. Grant permission</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="input_text">Input text</string>
    <string name="file_path">File path: %s</string>
    <string name="try_again">An error occurred</string>
    <string name="do_you_want_to_back">Do you want to go back to the photo editing screen?</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
</resources>