<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_FA">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_ripple_click_view_circle"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/image_back"
            android:fontFamily="sans-serif-medium"
            android:text="@string/settings"
            android:textColor="@color/color_25"
            android:textSize="22dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/support_our"
                android:textColor="@color/color_text"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRateApp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_settings_button"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/rating"
                android:textColor="@color/color_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvFeedback"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_settings_button"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/feedback"
                android:textColor="@color/color_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvShareApp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_settings_button"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/share_app"
                android:textColor="@color/color_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvOtherApps"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_settings_button"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/other_app"
                android:textColor="@color/color_text"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/app_info"
                android:textColor="@color/color_text"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTermOfUse"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_settings_button"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/term_of_use"
                android:textColor="@color/color_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvGiayPhep"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_settings_button"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/license"
                android:textColor="@color/color_text"
                android:textSize="16dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_settings_button"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/develop_team"
                android:textColor="@color/color_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_settings_button"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/phien_ban"
                android:textColor="@color/color_text"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
