<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.created.PictureCreatedDialogFragment">


    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="true"
        android:background="@color/color_E0"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_share_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_ripple_click_view_rectangle"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_share"
                android:backgroundTint="@color/color_25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/share"
                android:textColor="@color/color_25"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_delete_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_ripple_click_view_rectangle"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_delete"
                android:backgroundTint="@color/color_25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/delete"
                android:textColor="@color/color_25"
                android:textSize="14dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_check_all"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <ImageView
                    android:id="@+id/image_check_all"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/bg_ripple_click_view_circle"
                    android:src="@drawable/checkbox_custom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textColor="@color/color_25"
                    android:textSize="12dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_number_image_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/selected"
                android:textColor="@color/black"
                android:textSize="22dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_back_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/image_back"
                android:fontFamily="sans-serif-medium"
                android:text="Ảnh đã tạo"
                android:textColor="@color/color_25"
                android:textSize="22dp" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_empty_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_top"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/no_image"
        android:textColor="@color/color_25"
        android:textSize="16dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gallery_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_top"
        android:layout_above="@+id/bottom_sheet"/>

    <include
        android:id="@+id/loading_view"
        layout="@layout/loading_container"
        android:visibility="gone" />

</RelativeLayout>